--- a/desenvolvidor.html
+++ b/desenvolvidor.html
@@ -19,12 +19,12 @@
 
 
   <video id="vidBackground" autoplay loop>
-      <source src="./videos/Blue Neon Frame Background _ MD Animated Backgrounds _ Free Video Backgrounds.mp4">
+      <source src="Blue Neon Frame Background _ MD Animated Backgrounds _ Free Video Backgrounds.mp4">
     </video>
     <div class="profile">
     <div id="vid">
             <video id="video" autoplay loop >
-            <source src="./videos/para perfil.mp4"  >
+            <source src="para perfil.mp4"  >
             </video>
     </div>
     <div id="conteudo-texto">
@@ -59,4 +59,5 @@
     
    <script src="./Js.js"></script>
 </body>
+
 </html>
