--- a/html.htm
+++ b/html.htm
@@ -53,14 +53,15 @@
      <div id="overlay"></div>
    </div>
    <video loop autoplay id="somDoJogo">
-     <source src="./som do jogo/Sonic Mania OST - Studiopolis Act 1.mp4" >
+     <source src="Sonic Mania OST - Studiopolis Act 1.mp4" >
    </video>
     <video  autoplay id="somDeVitoria">
-     <source src="./som do jogo/Efeitos sonoros de grito e comemoração.mp4" >
+     <source src="Efeitos sonoros de grito e comemoração.mp4" >
    </video>
     <video  autoplay id="SomDeespanto">
-     <source src="./som do jogo/🔊Som e Efeito Pequeno grupo feminino expressando admiração, dizendo OOOOH  para fundo de jogos (HD).mp4" >
+     <source src="🔊Som e Efeito Pequeno grupo feminino expressando admiração, dizendo OOOOH  para fundo de jogos (HD).mp4" >
    </video>
 </body>
 <script src="./Js.js"></script>
+
 </html>
