--- a/desenvolvidorMelhorado.html
+++ b/desenvolvidorMelhorado.html
@@ -140,13 +140,13 @@
   </nav>
 
   <video id="vidBackground" autoplay loop muted>
-    <source src="./videos/Blue Neon Frame Background _ MD Animated Backgrounds _ Free Video Backgrounds.mp4">
+    <source src="Blue Neon Frame Background _ MD Animated Backgrounds _ Free Video Backgrounds.mp4">
   </video>
 
   <div class="profile">
     <div id="vid">
       <video id="video" autoplay loop muted>
-        <source src="./videos/para perfil.mp4">
+        <source src="para perfil.mp4">
       </video>
     </div>
     <div id="conteudo-texto">
@@ -165,3 +165,4 @@
   <script src="./Js.js"></script>
 </body>
 </html>
+
